feat#9 :: mapper 추가 및 grouping 로직 수정, 테스트 코드 수정